--- a/css/style.css
+++ b/css/style.css
@@ -286,7 +286,7 @@ ul.menu li:hover a, ul.menu li.current a {
 	background:url(../images/content-img.png) 1px bottom no-repeat;
 }
 .art {
-	background:url(../images/jar_enf.png) 0 0 no-repeat;
+	background:url(../images/club.png) 0 0 no-repeat;
 	width:320px;
 	background-size: contain;
 	height:159px;
